Fix image warp on mobile in StreamOverlay
 - @Todo: Disable landscape mode on mobile

--- a/src/sass/sections/_shop-overlay.scss
+++ b/src/sass/sections/_shop-overlay.scss
@@ -178,10 +178,11 @@
             .top-bar-wrapper {
                 position: absolute;
                 .button-close {
-                    background-color: black;
+                    background-color: rgba(0,0,0,0);
+                    padding: 24px;
                     svg {
-                        width: 50px;
-                        height: 50px;
+                        width: 35px;
+                        height: 35px;
                         path {
                             fill: $off-white;
                         }
@@ -213,8 +214,8 @@
                         img {
                             margin-top: 10%;
                             padding: 0;
-                            max-width: 50vw;
-                            // min-width: 70vw;
+                            width: 40vw;
+                            height: 40vw;
                         }
                     }
                     .info-container {
@@ -226,7 +227,10 @@
                             margin: 5px 15px;
                         }
                         h2 {
-                            margin-top: 30px;
+                            margin-top: 10px;
+                        }
+                        p {
+                            font-size: 1rem;
                         }
                         .produced {
                             display: none;
