--- a/src/sass/sections/_stream-modal.scss
+++ b/src/sass/sections/_stream-modal.scss
@@ -27,6 +27,9 @@
     &:hover {
       cursor: pointer;
     }
+    .closeModal {
+      font-size: 1.5rem;
+    }
   }
   ul {
     width: 100%;
